--- a/x86_64.config
+++ b/x86_64.config
@@ -81,3 +81,9 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_nfs-kernel-server=y
 CONFIG_PACKAGE_portmap=y
+#20200223
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-polipo=y
+CONFIG_PACKAGE_luci-app-softethervpn=y
+CONFIG_PACKAGE_luci-app-wireguard=y
